Wrapping up remaining accessibility fixes

--- a/_src/pattern-library/sass/utilities/_helpers.scss
+++ b/_src/pattern-library/sass/utilities/_helpers.scss
@@ -127,7 +127,7 @@
     );
 
     border-bottom: 1px solid $transparent;
-    color: palette(primary, base);
+    color: palette(primary, dark);
     text-decoration: none;
 
     // STATE: hover, active, focus
